objects/L2I_P_L_Approval__c.object
<CustomObject>
    <description>This object is used to track P&amp;L approvals submitted by Sales Team Members at a Deal Level</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>L2I_Approval_Deal_Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_User_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval User 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>P_L_ApprovalsI53N</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_User_11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval User 11</label>
        <referenceTo>User</referenceTo>
        <relationshipName>P_L_ApprovalsI53c</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_User_12__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval User 12</label>
        <referenceTo>User</referenceTo>
        <relationshipName>P_L_ApprovalsI53m</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Automated_Deal_Opportunity__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; L2I_Approval_Deal_Opportunity__c, L2I_Approval_Deal_Opportunity__r.L2I_Deal_Opportunity_Description__c)</formula>
        <label>Automated Deal Opportunity Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automated_Sales_Opportunity_Description__c</fullName>
        <label>Automated Sales Opportunity Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conect_DSS_PTS_ExecFin_Approval_Required__c</fullName>
        <formula>IF(OR((PL_PTS_NR__c &gt; 100000000), 
AND((PL_PTS_NR__c &gt; 100000000),(PL_PTS_PTP_P__c &lt;10)), 
(PL_PTS_PTP_P__c &lt;0)), &quot;TRUE&quot;, 
&quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conect DSS PTS ExecFin Approval Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connect_DSS_Executive_Approval_Required__c</fullName>
        <formula>IF(AND((PL_DSS_PTP_P__c &lt; 0),(PL_DSS_NR__c &gt; 10000000)), &quot;TRUE&quot; 
,&quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Connect DSS Executive Approval Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connect_DSS_VP_Sales_Approval_Required__c</fullName>
        <formula>IF(PL_DSS_PTP_P__c &lt; 10, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Connect DSS VP Sales Approval Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSS_Contribution_MarginPerc__c</fullName>
        <formula>L2I_DSS_Contribution_Margin__c /  L2I_DSS_Net_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSS Contribution Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DSS_Gross_MarginPerc__c</fullName>
        <formula>L2I_DSS_Gross_Margin__c /  L2I_DSS_Net_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSS Gross Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DSS_Pre_Tax_ProfitPerc__c</fullName>
        <formula>L2I_DSS_Pre_Tax_Profit__c /  L2I_DSS_Net_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSS Pre-Tax Profit %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Has_Stored_Calculations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Stored Calculations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IFEC_Contribution_MarginPerc__c</fullName>
        <formula>L2I_IFEC_Contribution_Margin__c /  L2I_IFEC_Net_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IFEC Contribution Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IFEC_Gross_MarginPerc__c</fullName>
        <formula>L2I_IFEC_Gross_Margin__c /  L2I_IFEC_Net_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IFEC Gross Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IFEC_Pre_Tax_ProfitPerc__c</fullName>
        <formula>L2I_IFEC_Pre_Tax_Profit__c /  L2I_IFEC_Net_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IFEC Pre-Tax Profit %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IFE_Hardware_Exec_Fin_Approval_Required__c</fullName>
        <formula>IF(OR((PL_IFE_NR__c &gt; 100000000),
AND((PL_IFE_NR__c &gt; 100000000),(PL_IFE_PTP_P__c &lt;0)),
(PL_IFE_PTP_P__c &gt;-20)), &quot;TRUE&quot;,
&quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IFE Hardware Exec Fin Approval Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFE_Hardware_Executive_Approval_Required__c</fullName>
        <formula>IF(AND((PL_IFE_PTP_P__c &gt; 0),( PL_IFE_NR__c  &gt; 50000000)), &quot;TRUE&quot; 
,&quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IFE Hardware Executive Approval Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFE_Hardware_VP_Sales_Approval_Required__c</fullName>
        <formula>IF( PL_IFE_PTP_P__c  &gt; 0, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IFE Hardware VP Sales Approval Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2IPLCreator_TaiwanSingaporeVietnam_Role__c</fullName>
        <formula>IF(CONTAINS( Owner:User.UserRole.Name , &quot;Taiwan&quot;), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P&amp;L Creator TaiwanSingaporeVietnam Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Additional_Description__c</fullName>
        <label>Additional Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Approval_Deal_Opportunity_Owner__c</fullName>
        <description>Approval Deal Opportunity Owner Name</description>
        <formula>L2I_Approval_Deal_Opportunity__r.Owner.FirstName + &#39; &#39; + L2I_Approval_Deal_Opportunity__r.Owner.LastName</formula>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Approval_Deal_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Deal Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only select a Deal Opportunity for this field</errorMessage>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Deal</value>
            </filterItems>
            <infoMessage>You can only select a Deal Opportunity for this field</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>P&amp;L Approvals</relationshipLabel>
        <relationshipName>P_L_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Contract_Deal_Summary_Quip_URL__c</fullName>
        <label>Contract Deal Summary Quip URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2I_DSS_Contribution_Margin__c</fullName>
        <label>DSS Contribution Margin $</label>
        <summarizedField>L2I_P_L_Sales_Opportunity__c.L2I_Direct_Contribution_Margin__c</summarizedField>
        <summaryFilterItems>
            <field>L2I_P_L_Sales_Opportunity__c.L2I_Primary_Product_Category__c</field>
            <operation>equals</operation>
            <value>DSS</value>
        </summaryFilterItems>
        <summaryForeignKey>L2I_P_L_Sales_Opportunity__c.L2I_P_L_Approval__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_DSS_Gross_Margin__c</fullName>
        <label>DSS Gross Margin $</label>
        <summarizedField>L2I_P_L_Sales_Opportunity__c.L2I_Gross_Margin__c</summarizedField>
        <summaryFilterItems>
            <field>L2I_P_L_Sales_Opportunity__c.L2I_Primary_Product_Category__c</field>
            <operation>equals</operation>
            <value>DSS</value>
        </summaryFilterItems>
        <summaryForeignKey>L2I_P_L_Sales_Opportunity__c.L2I_P_L_Approval__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_DSS_Gross_Revenue__c</fullName>
        <label>DSS Gross Revenue</label>
        <summarizedField>L2I_P_L_Sales_Opportunity__c.L2I_Gross_Sales__c</summarizedField>
        <summaryFilterItems>
            <field>L2I_P_L_Sales_Opportunity__c.L2I_Primary_Product_Category__c</field>
            <operation>equals</operation>
            <value>DSS</value>
        </summaryFilterItems>
        <summaryForeignKey>L2I_P_L_Sales_Opportunity__c.L2I_P_L_Approval__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_DSS_Net_Revenue__c</fullName>
        <label>DSS Net Revenue</label>
        <summarizedField>L2I_P_L_Sales_Opportunity__c.L2I_Net_Sales__c</summarizedField>
        <summaryFilterItems>
            <field>L2I_P_L_Sales_Opportunity__c.L2I_Primary_Product_Category__c</field>
            <operation>equals</operation>
            <value>DSS</value>
        </summaryFilterItems>
        <summaryForeignKey>L2I_P_L_Sales_Opportunity__c.L2I_P_L_Approval__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_DSS_Pre_Tax_Profit__c</fullName>
        <label>DSS Pre-Tax Profit $</label>
        <summarizedField>L2I_P_L_Sales_Opportunity__c.L2I_Profit_Before_Tax__c</summarizedField>
        <summaryFilterItems>
            <field>L2I_P_L_Sales_Opportunity__c.L2I_Primary_Product_Category__c</field>
            <operation>equals</operation>
            <value>DSS</value>
        </summaryFilterItems>
        <summaryForeignKey>L2I_P_L_Sales_Opportunity__c.L2I_P_L_Approval__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_Deal_Summary_Count__c</fullName>
        <label>Deal Summary Count</label>
        <summaryForeignKey>L2I_Deal_Summary__c.L2I_P_L_Approval__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_Financials_Included__c</fullName>
        <label>Financials Included</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DSS</fullName>
                </value>
                <value>
                    <fullName>PTS</fullName>
                </value>
                <value>
                    <fullName>IFEC</fullName>
                </value>
                <value>
                    <fullName>IFC</fullName>
                    <isActive>false</isActive>
                    <label>IFC</label>
                </value>
                <value>
                    <fullName>IFE</fullName>
                    <isActive>false</isActive>
                    <label>IFE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Contribution_Margin__c</fullName>
        <label>IFEC Contribution Margin $</label>
        <summarizedField>L2I_P_L_Sales_Opportunity__c.L2I_Direct_Contribution_Margin__c</summarizedField>
        <summaryFilterItems>
            <field>L2I_P_L_Sales_Opportunity__c.L2I_Primary_Product_Category__c</field>
            <operation>equals</operation>
            <value>IFEC</value>
        </summaryFilterItems>
        <summaryForeignKey>L2I_P_L_Sales_Opportunity__c.L2I_P_L_Approval__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Gross_Margin__c</fullName>
        <label>IFEC Gross Margin $</label>
        <summarizedField>L2I_P_L_Sales_Opportunity__c.L2I_Gross_Margin__c</summarizedField>
        <summaryFilterItems>
            <field>L2I_P_L_Sales_Opportunity__c.L2I_Primary_Product_Category__c</field>
            <operation>equals</operation>
            <value>IFEC</value>
        </summaryFilterItems>
        <summaryForeignKey>L2I_P_L_Sales_Opportunity__c.L2I_P_L_Approval__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Gross_Revenue__c</fullName>
        <label>IFEC Gross Revenue</label>
        <summarizedField>L2I_P_L_Sales_Opportunity__c.L2I_Gross_Sales__c</summarizedField>
        <summaryFilterItems>
            <field>L2I_P_L_Sales_Opportunity__c.L2I_Primary_Product_Category__c</field>
            <operation>equals</operation>
            <value>IFEC</value>
        </summaryFilterItems>
        <summaryForeignKey>L2I_P_L_Sales_Opportunity__c.L2I_P_L_Approval__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Net_Revenue__c</fullName>
        <label>IFEC Net Revenue</label>
        <summarizedField>L2I_P_L_Sales_Opportunity__c.L2I_Net_Sales__c</summarizedField>
        <summaryFilterItems>
            <field>L2I_P_L_Sales_Opportunity__c.L2I_Primary_Product_Category__c</field>
            <operation>equals</operation>
            <value>IFEC</value>
        </summaryFilterItems>
        <summaryForeignKey>L2I_P_L_Sales_Opportunity__c.L2I_P_L_Approval__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Pre_Tax_Profit__c</fullName>
        <label>IFEC Pre-Tax Profit $</label>
        <summarizedField>L2I_P_L_Sales_Opportunity__c.L2I_Profit_Before_Tax__c</summarizedField>
        <summaryFilterItems>
            <field>L2I_P_L_Sales_Opportunity__c.L2I_Primary_Product_Category__c</field>
            <operation>equals</operation>
            <value>IFEC</value>
        </summaryFilterItems>
        <summaryForeignKey>L2I_P_L_Sales_Opportunity__c.L2I_P_L_Approval__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_IntegrationMessage__c</fullName>
        <label>Integration Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2I_IntegrationStatus__c</fullName>
        <label>IntegrationStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_IntegrationStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_PTS_Contribution_Margin__c</fullName>
        <label>PTS Contribution Margin $</label>
        <summarizedField>L2I_P_L_Sales_Opportunity__c.L2I_Direct_Contribution_Margin__c</summarizedField>
        <summaryFilterItems>
            <field>L2I_P_L_Sales_Opportunity__c.L2I_Primary_Product_Category__c</field>
            <operation>equals</operation>
            <value>PTS</value>
        </summaryFilterItems>
        <summaryForeignKey>L2I_P_L_Sales_Opportunity__c.L2I_P_L_Approval__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_PTS_Gross_Margin__c</fullName>
        <label>PTS Gross Margin $</label>
        <summarizedField>L2I_P_L_Sales_Opportunity__c.L2I_Gross_Margin__c</summarizedField>
        <summaryFilterItems>
            <field>L2I_P_L_Sales_Opportunity__c.L2I_Primary_Product_Category__c</field>
            <operation>equals</operation>
            <value>PTS</value>
        </summaryFilterItems>
        <summaryForeignKey>L2I_P_L_Sales_Opportunity__c.L2I_P_L_Approval__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_PTS_Gross_Revenue__c</fullName>
        <label>PTS Gross Revenue</label>
        <summarizedField>L2I_P_L_Sales_Opportunity__c.L2I_Gross_Sales__c</summarizedField>
        <summaryFilterItems>
            <field>L2I_P_L_Sales_Opportunity__c.L2I_Primary_Product_Category__c</field>
            <operation>equals</operation>
            <value>PTS</value>
        </summaryFilterItems>
        <summaryForeignKey>L2I_P_L_Sales_Opportunity__c.L2I_P_L_Approval__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_PTS_Net_Revenue__c</fullName>
        <label>PTS Net Revenue</label>
        <summarizedField>L2I_P_L_Sales_Opportunity__c.L2I_Net_Sales__c</summarizedField>
        <summaryFilterItems>
            <field>L2I_P_L_Sales_Opportunity__c.L2I_Primary_Product_Category__c</field>
            <operation>equals</operation>
            <value>PTS</value>
        </summaryFilterItems>
        <summaryForeignKey>L2I_P_L_Sales_Opportunity__c.L2I_P_L_Approval__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_PTS_Pre_Tax_Profit__c</fullName>
        <label>PTS Pre-Tax Profit $</label>
        <summarizedField>L2I_P_L_Sales_Opportunity__c.L2I_Profit_Before_Tax__c</summarizedField>
        <summaryFilterItems>
            <field>L2I_P_L_Sales_Opportunity__c.L2I_Primary_Product_Category__c</field>
            <operation>equals</operation>
            <value>PTS</value>
        </summaryFilterItems>
        <summaryForeignKey>L2I_P_L_Sales_Opportunity__c.L2I_P_L_Approval__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_PTS_SVP_Approval_Required__c</fullName>
        <formula>IF(OR(AND((PL_PTS_NR__c &gt; 100000000),(PL_PTS_PTP_P__c &gt;0)),
AND((PL_PTS_NR__c &gt; 50000000),(PL_PTS_PTP_P__c &lt;10))), &quot;TRUE&quot;, 
&quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTS SVP Approval Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_P_L_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P&amp;L Approval</label>
        <referenceTo>L2I_P_L_Approval__c</referenceTo>
        <relationshipLabel>P&amp;L Approvals</relationshipLabel>
        <relationshipName>P_L_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_P_L_Creator_China_Role__c</fullName>
        <formula>IF(CONTAINS( Owner:User.UserRole.Name , &quot;China&quot;), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P&amp;L Creator China Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_P_L_Creator_GermanyItalyGreece_Role__c</fullName>
        <formula>IF(CONTAINS( Owner:User.UserRole.Name , &quot;Germany&quot;), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P&amp;L Creator GermanyItalyGreece Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_P_L_Creator_Hong_Kong_Role__c</fullName>
        <formula>IF(CONTAINS( Owner:User.UserRole.Name , &quot;Hong Kong&quot;), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P&amp;L Creator Hong Kong Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_P_L_Creator_India_North_Africa_Role__c</fullName>
        <formula>IF(CONTAINS( Owner:User.UserRole.Name , &quot;India&quot;), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P&amp;L Creator India North Africa Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_P_L_Creator_Japan_Role__c</fullName>
        <formula>IF(CONTAINS( Owner:User.UserRole.Name , &quot;Japan&quot;), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P&amp;L Creator Japan Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_P_L_Creator_Korea_Role__c</fullName>
        <formula>IF(CONTAINS( Owner:User.UserRole.Name , &quot;Korea&quot;), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P&amp;L Creator Korea Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_P_L_Creator_Latin_America_Role__c</fullName>
        <formula>IF(CONTAINS( Owner:User.UserRole.Name , &quot;Latin&quot;), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P&amp;L Creator Latin America Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_P_L_Creator_Netherlands_France_Role__c</fullName>
        <formula>IF(CONTAINS( Owner:User.UserRole.Name , &quot;France&quot;), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P&amp;L Creator Netherlands France Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_P_L_Creator_North_America_Role__c</fullName>
        <formula>IF(CONTAINS( Owner:User.UserRole.Name , &quot;North&quot;), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P&amp;L Creator North America Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_P_L_Creator_Oceania_Role__c</fullName>
        <formula>IF(CONTAINS( Owner:User.UserRole.Name , &quot;Oceania&quot;), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P&amp;L Creator Oceania Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_P_L_Creator_PTS_Role__c</fullName>
        <formula>IF(Begins( Owner:User.UserRole.Name , &quot;PTS&quot;), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P&amp;L Creator PTS Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_P_L_Creator_Turkey_Role__c</fullName>
        <formula>IF(CONTAINS( Owner:User.UserRole.Name , &quot;Turkey&quot;), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P&amp;L Creator Turkey Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_P_L_Creator_UAEBahrainQatar_Role__c</fullName>
        <formula>IF(CONTAINS( Owner:User.UserRole.Name , &quot;UAE&quot;), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P&amp;L Creator UAEBahrainQatar Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_P_L_Creator_UK_IAG_Role__c</fullName>
        <formula>IF(CONTAINS( Owner:User.UserRole.Name , &quot;United Kingdom&quot;), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P&amp;L Creator UK IAG Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_P_L_Deal_Opportunity_Region__c</fullName>
        <formula>L2I_Approval_Deal_Opportunity__r.L2I_Oppt_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P&amp;L Deal Opportunity Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Primary_P_L_Product_Category__c</fullName>
        <label>Primary P&amp;L Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IFEC</fullName>
                </value>
                <value>
                    <fullName>DSS</fullName>
                </value>
                <value>
                    <fullName>PTS</fullName>
                </value>
                <value>
                    <fullName>Connectivity Hardware &amp; DSS</fullName>
                    <isActive>false</isActive>
                    <label>Connectivity Hardware &amp; DSS</label>
                </value>
                <value>
                    <fullName>IFE Hardware</fullName>
                    <isActive>false</isActive>
                    <label>IFE Hardware</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_Region_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Revision_Status__c</fullName>
        <label>Revision Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                    <default>true</default>
                    <label>Initial</label>
                </value>
                <value>
                    <fullName>Revision/BAFO</fullName>
                </value>
                <value>
                    <fullName>Award</fullName>
                </value>
                <value>
                    <fullName>Contract Signed</fullName>
                </value>
                <value>
                    <fullName>Post Award</fullName>
                </value>
                <value>
                    <fullName>Initial?</fullName>
                    <isActive>false</isActive>
                    <label>Initial?</label>
                </value>
                <value>
                    <fullName>Initial </fullName>
                    <isActive>false</isActive>
                    <label>Initial </label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Sales_Opportunity_Description__c</fullName>
        <description>Rollup Field for the Description of all P&amp;L Sales Opportunities</description>
        <inlineHelpText>Description of all P&amp;L Sales Opportunities</inlineHelpText>
        <label>Sales Opportunity Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Summary__c</fullName>
        <label>Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Total_Contribution_Margin__c</fullName>
        <formula>L2I_IFEC_Contribution_Margin__c +  L2I_DSS_Contribution_Margin__c +  L2I_PTS_Contribution_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contribution Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_Total_Effective_Discount__c</fullName>
        <label>Total Effective Discount</label>
        <summarizedField>L2I_P_L_Sales_Opportunity__c.L2I_Discounts__c</summarizedField>
        <summaryForeignKey>L2I_P_L_Sales_Opportunity__c.L2I_P_L_Approval__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_Total_Gross_Margin__c</fullName>
        <formula>L2I_IFEC_Gross_Margin__c +  L2I_DSS_Gross_Margin__c +  L2I_PTS_Gross_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Gross Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_Total_Gross_Revenue__c</fullName>
        <formula>L2I_DSS_Gross_Revenue__c + L2I_IFEC_Gross_Revenue__c +  L2I_PTS_Gross_Revenue__c</formula>
        <label>Total Gross Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_Total_Net_Revenue__c</fullName>
        <formula>L2I_DSS_Net_Revenue__c +  L2I_IFEC_Net_Revenue__c +  L2I_PTS_Net_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Net Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_Total_Pre_Tax_Profit__c</fullName>
        <formula>L2I_DSS_Pre_Tax_Profit__c +  L2I_IFEC_Pre_Tax_Profit__c +  L2I_PTS_Pre_Tax_Profit__c</formula>
        <label>Total Pre-Tax Profit $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Approved_Date__c</fullName>
        <label>Last Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PL_DSS_CD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL DSS Credits &amp; Discounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_DSS_CM_P__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL DSS Contribution Margin (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PL_DSS_CM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL DSS Contribution Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_DSS_Cost__c</fullName>
        <label>PL DSS Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_DSS_GM_P__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL DSS Gross Margin (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PL_DSS_GM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL DSS Gross Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_DSS_GR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL DSS Gross Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_DSS_MP_P__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL DSS Marginal Profit (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PL_DSS_MP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL DSS Marginal Profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_DSS_NR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL DSS Net Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_DSS_PTP_P__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL DSS Pre-Tax Profit (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PL_DSS_PTP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL DSS Pre-Tax Profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_Home_Page__c</fullName>
        <formula>HYPERLINK(&quot;/lightning/page/home&quot;, &quot;Go to Home Page&quot;,&quot;_parent&quot;)</formula>
        <label>Home Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PL_IFC_CD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL IFC Credits &amp; Discounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>